# cli2telegram

./: README.md  cli2telegram.service_example  cli2telegram.toml_example  pyproject.toml  requirements.txt  setup.py  zed2telegram.toml_example
.github/workflows/: pythonpackage.yml  pythonpublish.yml
cli2telegram/: __init__.py  cli.py  config.py  const.py  daemon.py  util.py
tests/: __init__.py  test_message_processing.py
zed2telegram/: cli.py  config.py  util.py
